--- a/index.html
+++ b/index.html
@@ -315,107 +315,59 @@
 
     <hr class="m-0">
 
+    <!-- Skills Section -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-          
-        <div class="resume-content align-items-center">
+        <h2 class="mb-5">Core Skills</h2>
+        <div class="resume-content">
           <div class="border rounded-lg px-3 py-3 mb-2 mx-1">
-            <div class="subheading">Cloud Platforms</div>
-            <p>Worked extensively across the AWS platform as well as Azure DevOps</p>
+            <div class="subheading">Cloud Architecture</div>
+            <p>Expert in designing and implementing multi-cloud solutions (AWS & GCP) that are secure, scalable, resilient, and cost-optimised.</p>
             <ul class="fa-ul mb-0">
-              <li>
-                <i class="fa-li fab fa-aws"></i>
-                AWS</li>
-              <li>  
-                <i class="fa-li fab fa-microsoft"></i>
-                Azure</li>
+              <li><i class="fa-li fab fa-aws"></i>AWS</li>
+              <li><i class="fa-li fab fa-google"></i>GCP</li>
+              <li><i class="fa-li fab fa-microsoft"></i>Azure (advisory)</li>
             </ul>
-          </div><!-- end border-->
-        </div><!-- end resume content-->
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">   
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <div class="border rounded-lg px-3 py-3 mx-1">
-              <div class="subheading">DevOps Tools</div>
-              <p>Worked with a variety of DevOps tooling, the highlights of which include:</p>
+              <div class="subheading">Infrastructure as Code</div>
+              <p>Advanced hands-on expertise in Terraform with a rich library of reusable modules and automated deployments via GitHub Actions.</p>
               <ul class="fa-ul mb-0">
-                <li>
-                  <i class="fa-li fa fa-check"></i>
-                  AWS CodePipeline / CodeBuild / CodeDeploy</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Azure DevOps Platform</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Terraform Standalone / Enterprise</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Jenkins / Octopus</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Docker</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Ansible</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Kubernetes - AKS / EKS / ECS</li>
+                <li><i class="fa-li fa fa-check"></i>Terraform</li>
+                <li><i class="fa-li fa fa-check"></i>GitHub Actions CI/CD</li>
+                <li><i class="fa-li fa fa-check"></i>Terragrunt</li>
               </ul>
-            </div><!--end border-->
-          </div><!-- end resume content-->
-     
+            </div>
+          </div>
           <div class="resume-content">
             <div class="border rounded-lg px-3 py-3 mx-1">
-              <div class="subheading">Scripting Languages &amp; Tools</div>
-              <p>Extensive scripting experience including serverless (Lambda)</p>
+              <div class="subheading">DevSecOps & Automation</div>
+              <p>Driving secure, automated deployments and continuous improvement of cloud infrastructures.</p>
               <ul class="fa-ul mb-0">
-                <li>
-                  <i class="fa-li fa fa-check"></i>
-                  Python</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  PowerShell/Core</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  C# dotnet Core</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Bash (light exposure)</li>
+                <li><i class="fa-li fa fa-check"></i>CI/CD Pipelines</li>
+                <li><i class="fa-li fa fa-check"></i>Container Orchestration (Kubernetes)</li>
+                <li><i class="fa-li fa fa-check"></i>Security Governance & Compliance</li>
               </ul>
-            </div><!-- end border-->
-          </div><!-- end resume content-->
-
+            </div>
+          </div>
           <div class="resume-content">
             <div class="border rounded-lg px-3 py-3 mx-1">
-              <div class="subheading">Other skills</div>
-              <p>Other strings to my bow include:</p>
+              <div class="subheading">AI / Machine Learning</div>
+              <p>Leveraging AI/LLM platforms to empower innovative R&D initiatives.</p>
               <ul class="fa-ul mb-0">
-                <li>
-                  <i class="fa-li fa fa-check"></i>
-                  Route 53 / DNS</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Lambda</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  SSL certificates</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Linux & Windows server administration</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Buildinng web portals (HTML5 & CSS3)</li>
-                <li>  
-                  <i class="fa-li fa fa-check"></i>
-                  Cloudfront</li>
+                <li><i class="fa-li fa fa-check"></i>AI/ML Workloads</li>
+                <li><i class="fa-li fa fa-check"></i>AWS SageMaker</li>
+                <li><i class="fa-li fa fa-check"></i>Data & Analytics Integration</li>
               </ul>
-            </div><!--end border-->
-          </div><!-- end resume content-->
-
-        </div><!-- end resume item-->         
-      </div><!-- end w100-->   
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
 
     <hr class="m-0">
 
@@ -423,7 +375,7 @@
       <div class="w-100">        
         <h2 class="mb-5">Interests</h2>
         <div class="border rounded-lg px-3 py-3 mb-3">
-        <p>Apart from being a DevOps Engineer, I love to build things - anything from a website to an automatic chicken-coop door opener!  In the summer I enjoy travelling the UK, hiking, wild swimming and boating.</p>
+          <p>I am passionate about building cutting-edge cloud architectures and exploring the latest in AI and automation. When I'm not architecting innovative solutions, I enjoy travelling, and experimenting with new technologies that push the boundaries of what's possible.</p>
         <p class="mb-2">When at home and not studying for a new qualification, I follow a number of sci-fi and fantasy genre movies and television shows, I love to cook, and I spend a large amount of my free time exploring the latest technology advancements (amateur futurist).</p>
         <p class="mt-3"><b>More random passions include:</b></p>
         <p>Horror movies, cinema, DIY, camping, cats, chilling with family, travelling UK and Europe, Engineering, electronics, philosophy, cooking, the smell of sawn timber, family, fantasy & scifi, space, retro tech running, antique hunting, hot tubs, sound, music, history, off-grid living.</p>
