--- a/index.html
+++ b/index.html
@@ -316,57 +316,54 @@
     <hr class="m-0">
 
     <!-- Skills Section -->
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+    <section class="resume-section p-3 p-lg-5" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Core Skills</h2>
-        <div class="resume-content">
-          <div class="border rounded-lg px-3 py-3 mb-2 mx-1">
-            <div class="subheading">Cloud Architecture</div>
-            <p>Expert in designing and implementing multi-cloud solutions (AWS & GCP) that are secure, scalable, resilient, and cost-optimised.</p>
-            <ul class="fa-ul mb-0">
-              <li><i class="fa-li fab fa-aws"></i>AWS</li>
-              <li><i class="fa-li fab fa-google"></i>GCP</li>
-              <li><i class="fa-li fab fa-microsoft"></i>Azure (advisory)</li>
+        <div class="row">
+          <!-- Cloud Architecture -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <h4 class="mb-2">Cloud Architecture</h4>
+            <p class="small">Designing and implementing secure, scalable multi-cloud solutions (AWS, GCP, Azure advisory).</p>
+            <ul class="list-unstyled">
+              <li>AWS</li>
+              <li>GCP</li>
+              <li>Azure</li>
             </ul>
           </div>
-        </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <div class="border rounded-lg px-3 py-3 mx-1">
-              <div class="subheading">Infrastructure as Code</div>
-              <p>Advanced hands-on expertise in Terraform with a rich library of reusable modules and automated deployments via GitHub Actions.</p>
-              <ul class="fa-ul mb-0">
-                <li><i class="fa-li fa fa-check"></i>Terraform</li>
-                <li><i class="fa-li fa fa-check"></i>GitHub Actions CI/CD</li>
-                <li><i class="fa-li fa fa-check"></i>Terragrunt</li>
-              </ul>
-            </div>
+          <!-- Infrastructure as Code -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <h4 class="mb-2">Infrastructure as Code</h4>
+            <p class="small">Expertise in Terraform with a library of reusable modules and CI/CD integration via GitHub Actions.</p>
+            <ul class="list-unstyled">
+              <li>Terraform</li>
+              <li>GitHub Actions</li>
+              <li>Terragrunt</li>
+            </ul>
           </div>
-          <div class="resume-content">
-            <div class="border rounded-lg px-3 py-3 mx-1">
-              <div class="subheading">DevSecOps & Automation</div>
-              <p>Driving secure, automated deployments and continuous improvement of cloud infrastructures.</p>
-              <ul class="fa-ul mb-0">
-                <li><i class="fa-li fa fa-check"></i>CI/CD Pipelines</li>
-                <li><i class="fa-li fa fa-check"></i>Container Orchestration (Kubernetes)</li>
-                <li><i class="fa-li fa fa-check"></i>Security Governance & Compliance</li>
-              </ul>
-            </div>
+          <!-- DevSecOps & Automation -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <h4 class="mb-2">DevSecOps & Automation</h4>
+            <p class="small">Implementing secure, automated deployments and continuous improvements with modern CI/CD pipelines.</p>
+            <ul class="list-unstyled">
+              <li>CI/CD Pipelines</li>
+              <li>Kubernetes (AKS/EKS/ECS)</li>
+              <li>Security & Compliance</li>
+            </ul>
           </div>
-          <div class="resume-content">
-            <div class="border rounded-lg px-3 py-3 mx-1">
-              <div class="subheading">AI / Machine Learning</div>
-              <p>Leveraging AI/LLM platforms to empower innovative R&D initiatives.</p>
-              <ul class="fa-ul mb-0">
-                <li><i class="fa-li fa fa-check"></i>AI/ML Workloads</li>
-                <li><i class="fa-li fa fa-check"></i>AWS SageMaker</li>
-                <li><i class="fa-li fa fa-check"></i>Data & Analytics Integration</li>
-              </ul>
-            </div>
+          <!-- AI / Machine Learning -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <h4 class="mb-2">AI / Machine Learning</h4>
+            <p class="small">Leveraging AI/LLM platforms to drive innovation and support R&D initiatives.</p>
+            <ul class="list-unstyled">
+              <li>AI/ML Workloads</li>
+              <li>AWS SageMaker</li>
+              <li>Data Analytics</li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
+    
 
 
     <hr class="m-0">
