--- a/index.html
+++ b/index.html
@@ -323,62 +323,122 @@
           <!-- Cloud Architecture -->
           <div class="col-md-6 col-lg-3 mb-4">
             <h4 class="mb-2">Cloud Architecture</h4>
-            <p class="small">Designing and implementing secure, scalable multi-cloud solutions (AWS, GCP, Azure advisory).</p>
+            <p class="small">Designing secure, scalable multi-cloud solutions.</p>
             <ul class="list-unstyled">
-              <li>AWS</li>
-              <li>GCP</li>
-              <li>Azure</li>
+              <li><i class="fab fa-aws"></i> AWS</li>
+              <li><i class="fab fa-google"></i> GCP</li>
+              <li><i class="fab fa-microsoft"></i> Azure</li>
             </ul>
           </div>
           <!-- Infrastructure as Code -->
           <div class="col-md-6 col-lg-3 mb-4">
             <h4 class="mb-2">Infrastructure as Code</h4>
-            <p class="small">Expertise in Terraform with a library of reusable modules and CI/CD integration via GitHub Actions.</p>
+            <p class="small">Expertise in Terraform and CI/CD integration with GitHub Actions.</p>
             <ul class="list-unstyled">
-              <li>Terraform</li>
-              <li>GitHub Actions</li>
-              <li>Terragrunt</li>
+              <li><i class="fas fa-code"></i> Terraform</li>
+              <li><i class="fab fa-github"></i> GitHub Actions</li>
+              <li><i class="fas fa-layer-group"></i> Terragrunt</li>
             </ul>
           </div>
           <!-- DevSecOps & Automation -->
           <div class="col-md-6 col-lg-3 mb-4">
             <h4 class="mb-2">DevSecOps & Automation</h4>
-            <p class="small">Implementing secure, automated deployments and continuous improvements with modern CI/CD pipelines.</p>
+            <p class="small">Implementing secure, automated CI/CD pipelines.</p>
             <ul class="list-unstyled">
-              <li>CI/CD Pipelines</li>
-              <li>Kubernetes (AKS/EKS/ECS)</li>
-              <li>Security & Compliance</li>
+              <li><i class="fas fa-cogs"></i> CI/CD Pipelines</li>
+              <li><i class="fab fa-kubernetes"></i> Kubernetes (AKS/EKS/ECS)</li>
+              <li><i class="fas fa-shield-alt"></i> Security &amp; Compliance</li>
             </ul>
           </div>
           <!-- AI / Machine Learning -->
           <div class="col-md-6 col-lg-3 mb-4">
             <h4 class="mb-2">AI / Machine Learning</h4>
-            <p class="small">Leveraging AI/LLM platforms to drive innovation and support R&D initiatives.</p>
+            <p class="small">Leveraging AI/LLM to drive innovation in R&D.</p>
             <ul class="list-unstyled">
-              <li>AI/ML Workloads</li>
-              <li>AWS SageMaker</li>
-              <li>Data Analytics</li>
+              <li><i class="fas fa-robot"></i> AI/ML Workloads</li>
+              <li><i class="fas fa-server"></i> AWS SageMaker</li>
+              <li><i class="fas fa-chart-line"></i> Data Analytics</li>
             </ul>
           </div>
         </div>
       </div>
     </section>
     
-
-
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">        
-        <h2 class="mb-5">Interests</h2>
-        <div class="border rounded-lg px-3 py-3 mb-3">
-          <p>I am passionate about building cutting-edge cloud architectures and exploring the latest in AI and automation. When I'm not architecting innovative solutions, I enjoy travelling, and experimenting with new technologies that push the boundaries of what's possible.</p>
-        <p class="mb-2">When at home and not studying for a new qualification, I follow a number of sci-fi and fantasy genre movies and television shows, I love to cook, and I spend a large amount of my free time exploring the latest technology advancements (amateur futurist).</p>
-        <p class="mt-3"><b>More random passions include:</b></p>
-        <p>Horror movies, cinema, DIY, camping, cats, chilling with family, travelling UK and Europe, Engineering, electronics, philosophy, cooking, the smell of sawn timber, family, fantasy & scifi, space, retro tech running, antique hunting, hot tubs, sound, music, history, off-grid living.</p>
+    <section class="resume-section p-3 p-lg-5" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5 text-center">Interests</h2>
+        <div class="row">
+          <!-- Technology & Innovation -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-brain mr-2"></i>Technology &amp; Innovation
+                </h4>
+                <p class="card-text">
+                  I am passionate about building cutting-edge cloud architectures and exploring the latest in AI and automation.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Travel & Exploration -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-plane-departure mr-2"></i>Travel &amp; Exploration
+                </h4>
+                <p class="card-text">
+                  When I'm not architecting innovative solutions, I enjoy travelling and experimenting with new technologies that push the boundaries of what's possible.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Sci-fi & Fantasy -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-film mr-2"></i>Sci-fi &amp; Fantasy
+                </h4>
+                <p class="card-text">
+                  I follow a variety of sci-fi and fantasy movies and shows that inspire creativity and innovative thinking.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Culinary & Creativity -->
+          <div class="col-md-6 col-lg-6 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-utensils mr-2"></i>Culinary &amp; Creativity
+                </h4>
+                <p class="card-text">
+                  I love to cook and experiment in the kitchen, blending creativity with precision, much like designing a robust cloud solution.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Miscellaneous Passions -->
+          <div class="col-md-6 col-lg-6 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-music mr-2"></i>Miscellaneous Passions
+                </h4>
+                <p class="card-text">
+                  From horror movies, cinema, DIY projects, engineering and electronics to antique hunting, hot tubs, and off-grid living – I have a wide range of eclectic interests.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      </section>
     </section>
+    
 
     <hr class="m-0">
   </div>
