--- a/index.html
+++ b/index.html
@@ -318,51 +318,115 @@
     <!-- Skills Section -->
     <section class="resume-section p-3 p-lg-5" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Core Skills</h2>
+        <h2 class="mb-5 text-center">Core Skills</h2>
         <div class="row">
-          <!-- Cloud Architecture -->
+          <!-- Solution Architecture -->
           <div class="col-md-6 col-lg-3 mb-4">
-            <h4 class="mb-2">Cloud Architecture</h4>
-            <p class="small">Designing secure, scalable multi-cloud solutions.</p>
-            <ul class="list-unstyled">
-              <li><i class="fab fa-aws"></i> AWS</li>
-              <li><i class="fab fa-google"></i> GCP</li>
-              <li><i class="fab fa-microsoft"></i> Azure</li>
-            </ul>
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-project-diagram mr-2"></i>Solution Architecture
+                </h4>
+                <p class="card-text">
+                  Designing robust and scalable solutions that align with strategic business goals.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Cloud Expertise -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fab fa-aws mr-2"></i>Cloud Expertise
+                </h4>
+                <p class="card-text">
+                  Deep knowledge of AWS, GCP, and Azure platforms to drive digital transformation.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- DevOps -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-sync-alt mr-2"></i>DevOps
+                </h4>
+                <p class="card-text">
+                  Implementing CI/CD pipelines, automation, and agile practices for efficient delivery.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Security -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-shield-alt mr-2"></i>Security
+                </h4>
+                <p class="card-text">
+                  Enforcing robust security measures, compliance, and governance across cloud environments.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Leadership -->
+          <div class="col-md-6 col-lg-3 mb-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-chess-king mr-2"></i>Leadership
+                </h4>
+                <p class="card-text">
+                  Guiding teams with strategic vision and mentoring emerging cloud talents.
+                </p>
+              </div>
+            </div>
           </div>
           <!-- Infrastructure as Code -->
           <div class="col-md-6 col-lg-3 mb-4">
-            <h4 class="mb-2">Infrastructure as Code</h4>
-            <p class="small">Expertise in Terraform and CI/CD integration with GitHub Actions.</p>
-            <ul class="list-unstyled">
-              <li><i class="fas fa-code"></i> Terraform</li>
-              <li><i class="fab fa-github"></i> GitHub Actions</li>
-              <li><i class="fas fa-layer-group"></i> Terragrunt</li>
-            </ul>
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-code-branch mr-2"></i>Infrastructure as Code
+                </h4>
+                <p class="card-text">
+                  Automating deployments with Terraform, Terragrunt, and GitHub Actions.
+                </p>
+              </div>
+            </div>
           </div>
-          <!-- DevSecOps & Automation -->
+          <!-- Automation & Integration -->
           <div class="col-md-6 col-lg-3 mb-4">
-            <h4 class="mb-2">DevSecOps & Automation</h4>
-            <p class="small">Implementing secure, automated CI/CD pipelines.</p>
-            <ul class="list-unstyled">
-              <li><i class="fas fa-cogs"></i> CI/CD Pipelines</li>
-              <li><i class="fab fa-kubernetes"></i> Kubernetes (AKS/EKS/ECS)</li>
-              <li><i class="fas fa-shield-alt"></i> Security &amp; Compliance</li>
-            </ul>
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-robot mr-2"></i>Automation &amp; Integration
+                </h4>
+                <p class="card-text">
+                  Streamlining workflows through automation and seamless system integrations.
+                </p>
+              </div>
+            </div>
           </div>
-          <!-- AI / Machine Learning -->
+          <!-- AI & Innovation -->
           <div class="col-md-6 col-lg-3 mb-4">
-            <h4 class="mb-2">AI / Machine Learning</h4>
-            <p class="small">Leveraging AI/LLM to drive innovation in R&D.</p>
-            <ul class="list-unstyled">
-              <li><i class="fas fa-robot"></i> AI/ML Workloads</li>
-              <li><i class="fas fa-server"></i> AWS SageMaker</li>
-              <li><i class="fas fa-chart-line"></i> Data Analytics</li>
-            </ul>
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fas fa-lightbulb mr-2"></i>AI &amp; Innovation
+                </h4>
+                <p class="card-text">
+                  Harnessing AI/ML to drive creative solutions and advance R&D initiatives.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </section>
+    </section>    
     
     <hr class="m-0">
 
