--- a/index.html
+++ b/index.html
@@ -287,76 +287,72 @@
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5" id="education">
-      <div class="w-100">
-        <h2 class="mb-5 text-center">Education &amp; Certifications</h2>
-        <div class="timeline">
-          <!-- Timeline Item 1: CCSP -->
-          <div class="timeline-item mb-4">
-            <div class="row align-items-center">
-              <div class="col-md-2 text-center">
-                <a href="https://www.isc2.org/Certifications/CCSP">
-                  <img src="img/ISC2-Main-Logo-Green.png" height="40" alt="ISC2 logo">
-                </a>
-              </div>
-              <div class="col-md-10">
-                <h4 class="mb-1">CCSP - Certified Cloud Security Professional</h4>
-                <span class="text-primary">Dec 2019 - No Expiry</span>
-                <p class="mt-2 mb-0"><strong>The Industry’s Premier Cloud Security Certification</strong></p>
-                <p class="mb-0">Validates advanced skills to design, manage, and secure cloud data, applications, and infrastructure following ISC² best practices.</p>
-              </div>
+      <div class="container">
+        <h2 class="pb-2 border-bottom text-center">Education &amp; Certifications</h2>
+        <div class="row g-4 py-4">
+          <!-- CCSP -->
+          <div class="col-12 col-md-6 d-flex align-items-start">
+            <div class="icon-square text-bg-primary bg-gradient rounded-3 d-inline-flex align-items-center justify-content-center fs-3 flex-shrink-0 me-3">
+              <a href="https://www.isc2.org/Certifications/CCSP">
+                <img src="img/ISC2-Main-Logo-Green.png" height="40" alt="ISC2 logo">
+              </a>
+            </div>
+            <div>
+              <h3 class="fs-5 mb-1">CCSP - Certified Cloud Security Professional</h3>
+              <span class="text-primary">Dec 2019 - No Expiry</span>
+              <p class="mb-0">Validates advanced cloud security skills using ISC² best practices.</p>
             </div>
           </div>
-          <!-- Timeline Item 2: AWS CSA -->
-          <div class="timeline-item mb-4">
-            <div class="row align-items-center flex-md-row-reverse">
-              <div class="col-md-2 text-center">
-                <a href="https://aws.amazon.com/certification/certified-solutions-architect-associate/">
-                  <img src="img/aws-logo.png" height="40" alt="AWS logo">
-                </a>
-              </div>
-              <div class="col-md-10">
-                <h4 class="mb-1">AWS Certified Solutions Architect – Associate</h4>
-                <span class="text-primary">July 2019 - July 2021</span>
-                <p class="mt-2 mb-0"><strong>Proven Expertise in AWS Solutions Architecture</strong></p>
-                <p class="mb-0">Demonstrates hands-on experience in designing fault-tolerant, cost-efficient, and secure distributed systems on AWS.</p>
-              </div>
+          <!-- AWS CSA -->
+          <div class="col-12 col-md-6 d-flex align-items-start">
+            <div class="icon-square text-bg-primary bg-gradient rounded-3 d-inline-flex align-items-center justify-content-center fs-3 flex-shrink-0 me-3">
+              <a href="https://aws.amazon.com/certification/certified-solutions-architect-associate/">
+                <img src="img/aws-logo.png" height="40" alt="AWS logo">
+              </a>
+            </div>
+            <div>
+              <h3 class="fs-5 mb-1">AWS Certified Solutions Architect – Associate</h3>
+              <span class="text-primary">July 2019 - July 2021</span>
+              <p class="mb-0">Demonstrates expertise in designing cost-efficient and secure AWS solutions.</p>
             </div>
           </div>
-          <!-- Timeline Item 3: Terraform Associate -->
-          <div class="timeline-item mb-4">
-            <div class="row align-items-center">
-              <div class="col-md-2 text-center">
-                <a href="https://www.hashicorp.com/certification/terraform-associate">
-                  <img src="img/terraform-logo.png" height="40" alt="Terraform logo">
-                </a>
-              </div>
-              <div class="col-md-10">
-                <h4 class="mb-1">Terraform Associate (2025)</h4>
-                <span class="text-primary">2025</span>
-                <p class="mt-2 mb-0"><strong>Expertise in Infrastructure as Code</strong></p>
-                <p class="mb-0">Validates proficiency in Terraform, showcasing advanced skills in designing, building, and managing infrastructure as code.</p>
-              </div>
+          <!-- Terraform Associate -->
+          <div class="col-12 col-md-6 d-flex align-items-start">
+            <div class="icon-square text-bg-primary bg-gradient rounded-3 d-inline-flex align-items-center justify-content-center fs-3 flex-shrink-0 me-3">
+              <a href="https://www.hashicorp.com/certification/terraform-associate">
+                <img src="img/terraform-logo.png" height="40" alt="Terraform logo">
+              </a>
+            </div>
+            <div>
+              <h3 class="fs-5 mb-1">Terraform Associate (2025)</h3>
+              <span class="text-primary">2025</span>
+              <p class="mb-0">Certifies proficiency in Infrastructure as Code and Terraform best practices.</p>
             </div>
           </div>
-          <!-- Timeline Item 4: BSc Psychology -->
-          <div class="timeline-item mb-4">
-            <div class="row align-items-center flex-md-row-reverse">
-              <div class="col-md-2 text-center">
-                <a href="http://www.openuniversity.edu/courses/programmes/bachelor-degrees/bachelor-of-science">
-                  <img src="img/ou-logo.png" height="40" alt="Open University logo">
-                </a>
-              </div>
-              <div class="col-md-10">
-                <h4 class="mb-1">BSc (Honours) Psychology – 2:1</h4>
-                <span class="text-primary">May 2004 - May 2009</span>
-                <p class="mt-2 mb-0"><strong>Solid Foundation in Human Behaviour &amp; Analytical Thinking</strong></p>
-                <p class="mb-0">Provided robust insights into cognitive, clinical, and social psychology, enhancing my analytical, communication, and problem-solving skills.</p>
-              </div>
+          <!-- BSc (Honours) Psychology -->
+          <div class="col-12 col-md-6 d-flex align-items-start">
+            <div class="icon-square text-bg-primary bg-gradient rounded-3 d-inline-flex align-items-center justify-content-center fs-3 flex-shrink-0 me-3">
+              <a href="http://www.openuniversity.edu/courses/programmes/bachelor-degrees/bachelor-of-science">
+                <img src="img/ou-logo.png" height="40" alt="Open University logo">
+              </a>
+            </div>
+            <div>
+              <h3 class="fs-5 mb-1">BSc (Honours) Psychology – 2:1</h3>
+              <span class="text-primary">May 2004 - May 2009</span>
+              <p class="mb-0">A solid foundation in human behaviour, enhancing analytical and communication skills.</p>
             </div>
           </div>
         </div>
       </div>
+      <style>
+        /* Ensure consistent icon container sizing */
+        .icon-square {
+          width: 3.5rem;
+          height: 3.5rem;
+        }
+      </style>
     </section>
+    
 
     <hr class="m-0">
 
