--- a/index.html
+++ b/index.html
@@ -347,8 +347,13 @@
       <style>
         /* Ensure consistent icon container sizing */
         .icon-square {
-          width: 3.5rem;
-          height: 3.5rem;
+          width: 4.5rem;
+          height: 4.5rem;
+        }
+        /* Ensure logos scale appropriately */
+        .icon-square img {
+          max-width: 100%;
+          max-height: 100%;
         }
       </style>
     </section>
