introduced pre-commit, new deploy script

--- a/index.html
+++ b/index.html
@@ -431,22 +431,22 @@
                   by AWS.
                 </p>
                 <ul>
-                  <li>Ensuring 99.9% uptime across web portfolio</li>
+                  <li>Ensuring 99.9% uptime across web portfolio.</li>
                   <li>
                     Monitoring customer experience and infrastructure against
                     KPIs and service SLAs
                   </li>
                   <li>
                     Automating repeatable processes across infrastructure
-                    (Python, Selenium and PowerShell)
+                    (Python, Selenium and PowerShell).
                   </li>
                   <li>
                     Deploying new code to production and non-production
-                    environments
+                    environments.
                   </li>
                   <li>
                     Infrastructure monitoring, administration, patching and
-                    security hardening
+                    security hardening.
                   </li>
                   <li>DNS, SSL and DNS ownership and change management</li>
                 </ul>
